// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="App"
>
  <div
    className="page"
  >
    <div
      className="interactions"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          onChange={[Function]}
          type="text"
          value="redux"
        />
        <button
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="table"
    >
      <div
        className="table-row"
      >
        <span
          style={
            Object {
              "fontWeight": "700",
              "width": "40%",
            }
          }
        >
          Title
        </span>
        <span
          style={
            Object {
              "fontWeight": "700",
              "width": "30%",
            }
          }
        >
          Author
        </span>
        <span
          style={
            Object {
              "fontWeight": "700",
              "width": "10%",
            }
          }
        >
          Comments
        </span>
        <span
          style={
            Object {
              "fontWeight": "700",
              "width": "10%",
            }
          }
        >
          Points
        </span>
        <span
          style={
            Object {
              "fontWeight": "700",
              "width": "10%",
            }
          }
        />
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "gap": "10px",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="interactions"
      >
        <button
          className=""
          onClick={[Function]}
          type="button"
        >
          More
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  type="button"
>
  More
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form>
  <input
    type="text"
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "fontWeight": "700",
          "width": "40%",
        }
      }
    >
      Title
    </span>
    <span
      style={
        Object {
          "fontWeight": "700",
          "width": "30%",
        }
      }
    >
      Author
    </span>
    <span
      style={
        Object {
          "fontWeight": "700",
          "width": "10%",
        }
      }
    >
      Comments
    </span>
    <span
      style={
        Object {
          "fontWeight": "700",
          "width": "10%",
        }
      }
    >
      Points
    </span>
    <span
      style={
        Object {
          "fontWeight": "700",
          "width": "10%",
        }
      }
    />
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        target="_blank"
      >
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-active"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        target="_blank"
      >
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-active"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
